[package]
name = "delphor-oracle-aggregator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "delphor_oracle_aggregator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
solana-program = "1.8.11"
delphor-oracle = { path = "../delphor-oracle", features = ["cpi"] }
pyth-client= {version = "0.3.0", features = ["no-entrypoint"] }
switchboard-program = "=0.2.0"
lexical = "=6.0.1"