[package]
name = "super-liquidity"
version = "0.1.0"
description = "Delphor.finance super-liquidity"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "super_liquidity"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["anchor-debug"]
anchor-debug = []

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
solana-program = "1.8.11"
delphor-oracle-aggregator = { path = "../delphor-oracle-aggregator", features = ["cpi"] }

# kept here even if it generates a warning
# in case this project is moved and/or compiled on its own
[profile.release]
overflow-checks = true
